# invilso-landing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  factory.py  schemas.py  worker.py
app/data/: legal_pages.json
app/models/: legal.py
app/routers/: contact.py  pages.py
app/services/: legal_pages.py  rate_limit.py  telegram.py
app/templates/: base.html  home.html  legal.html
app/templates/partials/: layout.html
app/workers/: __init__.py  registry.py
static/: robots.txt  sitemap.xml
static/css/: app.css
tests/: conftest.py  test_contact_endpoint.py  test_legal_pages_service.py  test_main.py  test_pages.py  test_rate_limit_service.py  test_worker.py  test_worker_module.py  test_worker_registry.py
