[project]
name = "invilso-landing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.111,<1.0",
	"uvicorn[standard]>=0.30,<0.31",
	"arq>=0.26,<0.27",
	"httpx>=0.27,<0.28",
	"pydantic-settings>=2.2,<3.0",
	"email-validator>=2.1,<3.0",
	"jinja2>=3.1,<4.0",
	"limits>=3.13,<4.0",
	"redis>=5.0,<6.0",
	"coredis>=4.0,<5.0",
]

[project.optional-dependencies]
test = [
	"pytest>=8.3,<9.0",
	"pytest-asyncio>=0.23,<0.24",
	"pytest-cov>=5.0,<6.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov=main --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
dev-dependencies = [
	"pytest>=8.3,<9.0",
	"pytest-asyncio>=0.23,<0.24",
	"pytest-cov>=5.0,<6.0",
]
